--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -1,28 +1,38 @@
-.content {
+* {
+    font-family: Helvetica, sans-serif;
+    margin: 0;
+    padding: 0;
+}
+
+#root {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100vh;
+}
+
+.header-section {
     display: flex;
     justify-content: space-evenly;
-    margin-left: auto;
-    margin-right: auto;
     width: 100%;
-    height: 100%;
+}
+
+.content-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
 }
 
 .column {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    width: 25vw;
+    height: 100vh;
+    background-size: cover;
     background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-position: center;
-    color: blue;
-    font-weight: bolder;
-    width: 100%;
-    height: 50vh;
-}
-
-.title {
-    background-color: black;
-    color: white;
-    padding: 10px;
+    background-position: center center;
+    padding-left: 30px;
+    padding-top: 20px;
+    filter: blur(0.5px);
+    -webkit-filter: blur(0.5px);
 }
