--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -1,9 +1,12 @@
-#content {
-  margin-left: auto;
-  margin-right: auto;
-  width: 650px;
+* {
+    font-family: Helvetica, sans-serif;
+    margin: 0;
+    padding: 0;
 }
 
-#greeting-container {
-  margin-top: 20px;
+#root {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100vh;
 }
